补充JVM参数