@@ -1,6 +1,7 @@
 package com.cmcm.study.jvm;
 
 /**
+ * JVM参数-Xmx20m -Xms20m -Xmn15m -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC
  * @author Spontaneously
  * @time 2018-11-21 下午8:17
  */
